css hack: questionTile span/inline-block to wrap about inside contents to fix yellow-highlight-border

--- a/client/css/edu-hack.styl
+++ b/client/css/edu-hack.styl
@@ -318,7 +318,7 @@ body
 		.question-tile
 			margin-bottom: 5px
 			height: 145px
-			display: block
+			display: inline-block
 
 		.question-tile-left, .question-tile-right
 			height: 100%
